--- a/members.html
+++ b/members.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Heimdall games - Services</title>
+  <title>Heimdall games - Members</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -32,6 +32,7 @@
 
   <div class="KW_progressContainer">
     <div class="KW_progressBar">
+
     </div>
   </div>
   <div class="page">
@@ -42,13 +43,13 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Heimdall Gamesf</a></h1>
+              <h1 class="mb-4"><a href="index.html" class="logo">Heimdall Games</a></h1>
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li class="active"><a href="services.html"><span><small>03</small>Services</span></a></li>
+                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="members.html"><span><small>06</small>Members</span></a></li>
+                <li class="active"><a href="members.html"><span><small>06</small>Members</span></a></li>
               </ul>
             </div>
           </div>
@@ -72,41 +73,103 @@
       </header>
 
       <section class="ftco-section">
-        <div class="container mt-5">
+        <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>What i do</span>
-              <h2>My services</h2>
+              <span>Members</span>
+              <h2>Knew our best part</h2>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-              <div class="media block-6 services p-3 py-4 d-block text-center">
-                <div class="icon mb-3"><span class="icon-layers"></span></div>
-                <div class="media-body">
-                  <h3 class="heading">Unity</h3>
-                  <h3 class="heading">Android studios</h3>
-                  <h3 class="heading">Unreal Engine</h3>
+
+          <div class="row no-gutters">
+
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="images/members/iagoCL.jpg" class="image order-2 d-flex justify-content-center align-items-center"
+                style="background-image: url('images/members/iagoCL.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
                 </div>
+              </a>
+              <div class="text">
+                <h2 class="heading"><a href="images/members/iagoCL.jpg">Iago Calvo Lista</a></h2>
+                <p>My dream it's to make videogames and i'm going to work hard to do it.</p>
+                <ul class="ftco-footer-social list-unstyled mt-4">
+                  <li><a href="#"><span class="icon-twitter"></span></a></li>
+                  <li><a href="#"><span class="icon-facebook"></span></a></li>
+                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                </ul>
               </div>
             </div>
-            <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-              <div class="media block-6 services p-3 py-4 d-block text-center">
-                <div class="icon mb-3"><span class="icon-gears"></span></div>
-                <div class="media-body">
-                  <h3 class="heading">Product Strategy</h3>
-                  <h3 class="heading">Interface Design</h3>
+
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="images/members/iagoCG.jpg" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/members/iagoCG.jpg'); "
+                data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
                 </div>
+              </a>
+              <div class="text">
+                <h2 class="heading"><a href="images/members/iagoCG.jpg">Iago Cruz Garcia</a></h2>
+                <p>Some personal info</p>
+                <ul class="ftco-footer-social list-unstyled mt-4">
+                  <li><a href="#"><span class="icon-twitter"></span></a></li>
+                  <li><a href="#"><span class="icon-facebook"></span></a></li>
+                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                </ul>
               </div>
             </div>
-            <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-              <div class="media block-6 services p-3 py-4 d-block text-center">
-                <div class="icon mb-3"><span class="icon-code"></span></div>
-                <div class="media-body">
-                  <h3 class="heading">HTML/CSS/Javascript</h3>
-                  <h3 class="heading">c++</h3>
-                  <h3 class="heading">Java</h3>
+
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="images/members/javierMP.jpg" class="image order-2 d-flex justify-content-center align-items-center"
+                style="background-image: url('images/members/JavierMP.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
                 </div>
+              </a>
+              <div class="text">
+                <h2 class="heading"><a href="images/members/javierMP.jpg">Javier Martinéz Pablo</a></h2>
+                <p>Some personal info</p>
+                <ul class="ftco-footer-social list-unstyled mt-4">
+                  <li><a href="#"><span class="icon-twitter"></span></a></li>
+                  <li><a href="#"><span class="icon-facebook"></span></a></li>
+                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="images/members/angelCG.jpg" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/members/angelCG.jpg'); "
+                data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
+                </div>
+              </a>
+              <div class="text">
+                <h2 class="heading"><a href="images/members/angelCG.jpg">Angel Cabanilles Gomar</a></h2>
+                <p>Some personal info</p>
+                <ul class="ftco-footer-social list-unstyled mt-4">
+                  <li><a href="#"><span class="icon-twitter"></span></a></li>
+                  <li><a href="#"><span class="icon-facebook"></span></a></li>
+                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                </ul>
+              </div>
+            </div>
+            ¡
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="images/members/germanMG.jpg" class="image order-2 d-flex justify-content-center align-items-center"
+                style="background-image: url('images/members/germanMG.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
+                </div>
+              </a>
+              <div class="text">
+                <h2 class="heading"><a href="images/members/germanMG.jpg">German Matilla Gimenez</a></h2>
+                <p>Some personal info</p>
+                <ul class="ftco-footer-social list-unstyled mt-4">
+                  <li><a href="#"><span class="icon-twitter"></span></a></li>
+                  <li><a href="#"><span class="icon-facebook"></span></a></li>
+                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                </ul>
               </div>
             </div>
           </div>
