--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               </a>
               <div class="text">
                 <h2 class="heading"><a href="images/members/iagoCG.jpg">Iago Cruz Garcia</a></h2>
-                <p>Some personal info</p>
+                <p>Working hard to make games for children to learn. Coffee is my best friend.</p>
                 <ul class="ftco-footer-social list-unstyled mt-4">
                   <li><a href="#"><span class="icon-twitter"></span></a></li>
                   <li><a href="#"><span class="icon-facebook"></span></a></li>
