--- a/members.html
+++ b/members.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -127,8 +127,8 @@
                 </div>
               </a>
               <div class="text">
-                <h2 class="heading"><a href="images/members/javierMP.jpg">Javier Martinéz Pablo</a></h2>
-                <p>Some personal info</p>
+                <h2 class="heading"><a href="images/members/javierMP.jpg">Javier Martinez Pablo</a></h2>
+                <p>Love music, comics and writing. Improving is my goal.</p>
                 <ul class="ftco-footer-social list-unstyled mt-4">
                   <li><a href="#"><span class="icon-twitter"></span></a></li>
                   <li><a href="#"><span class="icon-facebook"></span></a></li>
@@ -146,7 +146,7 @@
               </a>
               <div class="text">
                 <h2 class="heading"><a href="images/members/angelCG.jpg">Angel Cabanilles Gomar</a></h2>
-                <p>Some personal info</p>
+                <p>Fell deeds awake... now for wrath... now for ruin and a red dawn!<p>
                 <ul class="ftco-footer-social list-unstyled mt-4">
                   <li><a href="#"><span class="icon-twitter"></span></a></li>
                   <li><a href="#"><span class="icon-facebook"></span></a></li>
@@ -163,8 +163,8 @@
                 </div>
               </a>
               <div class="text">
-                <h2 class="heading"><a href="images/members/germanMG.jpg">German Matilla Gimenez</a></h2>
-                <p>Some personal info</p>
+                <h2 class="heading"><a href="images/members/germanMG.jpg">German Matilla Jimenez</a></h2>
+                <p>I´ve always loved videogames. One day I´ll make others love them too</p>
                 <ul class="ftco-footer-social list-unstyled mt-4">
                   <li><a href="#"><span class="icon-twitter"></span></a></li>
                   <li><a href="#"><span class="icon-facebook"></span></a></li>
