--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
   <title>Heimdall games</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-   crossorigin="anonymous">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
 
@@ -82,8 +78,8 @@
           <div class="container">
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <p><a href="#" class="scroll">Proximamente...</a></p>
-                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">juego hecho completamente en HTML/JS</h1>
+                <p><a href="#" class="scroll">Hello! We are</a></p>
+                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Heimdall Games</h1>
               </div>
             </div>
           </div>
@@ -94,8 +90,8 @@
           <div class="container">
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <p><a href="#" class="scroll">Proximamente...</a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Un juego hecho en Unity para web</h1>
+                <p><a href="#" class="scroll">We are from Spain</a></p>
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Game Developer Studio</h1>
               </div>
             </div>
           </div>
@@ -187,7 +183,7 @@
                 </div>
               </a>
               <div class="text">
-                <h2 class="heading"><a href="images/members/javierMP.jpg">Javier Martínez Pablo</a></h2>
+                <h2 class="heading"><a href="images/members/javierMP.jpg">Javier Martinez Pablo</a></h2>
                 <p>Love music, comics and writing. Improving is my goal.</p>
                 <ul class="ftco-footer-social list-unstyled mt-4">
                   <li><a href="#"><span class="icon-twitter"></span></a></li>
@@ -296,11 +292,10 @@
                 </div>
               </a>
               <div class="text">
-                <h4 class="subheading">Videogame</h4>
-                <h2 class="heading"><a href="portfolio-single.html">"Lorem ipsum dolor sit amet,
-                   consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                     ex ea commodo consequat.</p>
+                <h4 class="subheading">Illustration</h4>
+                <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
+                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
+                  life One day however a small line of blind text.</p>
                 <p><a href="#">View Project</a></p>
               </div>
             </div>
@@ -313,11 +308,10 @@
                 </div>
               </a>
               <div class="text order-1">
-                <h4 class="subheading">Videogame</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">"Lorem ipsum dolor sit amet,
-                   consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                   dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                   laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h4 class="subheading">Application</h4>
+                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
+                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
+                  life One day however a small line of blind text.</p>
                 <p><a href="#">View Project</a></p>
               </div>
             </div>
