--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/carouselFade.css">
+    <link rel="stylesheet" href="css/thumbnails.css">
 
 </head>
 
@@ -17,6 +18,8 @@
     <h1>Heimdall Games</h1>
     <h3>Keeping an eye in all</h3>
     </div>
+    
+    <!-- Carousel with games images-->
     <div class="container">
 
         <div id="projectCarousel" class="carousel fade-carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
@@ -57,17 +60,18 @@
 
     </div>
 
+    <!--Thumbnails with the team -->
     <div class="container">
         <div class="row">
             <div class="col-xs-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="images/members/iagoCL.jpg" class="img-responsive" alt="Iago Calvo">
+                    <img src="images/members/iagoCL.jpg" class="img-fluid img-thumbnail" alt="Iago Calvo">
                     <p>My dream it's to make videogames and i'm going to work hard to do it.</p>
                 </div>
             </div>
             <div class="col-xs-6 col-md-4">
-                <div class="thumbnail">
-                    <img src="images/members/iagoCG.jpg" class="img-responsive" alt="Iago Cruz">
+                <div class="card">
+                    <img src="images/members/iagoCG.jpg" class="card-img-top" alt="Iago Cruz">
                     <p>Working hard to make games for children to learn. Coffee is my best friend.</p>
                 </div>
             </div>
@@ -98,6 +102,7 @@
     </div>
 
 </body>
+    
 <footer style="background-color: cadetblue" class="footer">
     <div class="container">
         <div class="row">
