Getting rid of parallax

--- a/index.html
+++ b/index.html
@@ -12,23 +12,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/_header.css">
     <link rel="stylesheet" href="css/carouselFade.css">
     <link rel="stylesheet" href="css/thumbnails.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/body.css">
     <script src="js/carousel.js"></script>
 </head>
 
 <body>
-    <div class="MainContainer">
-        <div class="ParallaxContainer">
+    <div class="page-header text-center">
             <h1>
                 Heimdall Games
             </h1>
-        </div>
-
-        <div class="ContentContainer">
-            <div class="Content">
+    </div>
                 <!-- Carousel with games images-->
                 <div class="container">
 
@@ -70,9 +66,9 @@
                     </div>
 
                 </div>
-
-                <div class="container row">
-                    <div class="col">
+<div class="container">
+                <div class="row">
+                    <div class="col-12">
                         <figure class="member2">
                             <img src="images/members/iagoCG.jpg" alt="Iago Cruz García" />
                             <figcaption>
@@ -82,23 +78,23 @@
                             <div class="position">Programmer</div>
                         </figure>
                     </div>
-
+                    <div class="col-12">
                     <figure class="member2">
                         <img src="images/members/iagoCL.jpg" alt="Iago Cruz García" />
                         <figcaption>
                             <h2>Iago <span>Calvo</span></h2>
                             <p>Working hard to make games. Coffee is my best friend</p>
                         </figcaption>
-                        <div class="position">Programmer</div>
+                        <div class="position">Programmer/3D Artist</div>
                     </figure>
-
+                </div>
                     <figure class="member2">
                         <img src="images/members/javierMP.jpg" alt="Iago Cruz García" />
                         <figcaption>
                             <h2>Javier <span>Martínez</span></h2>
                             <p>Working hard to make games. Coffee is my best friend</p>
                         </figcaption>
-                        <div class="position">Programmer</div>
+                        <div class="position">Game Designer</div>
                     </figure>
 
                     <figure class="member2">
@@ -107,7 +103,7 @@
                             <h2>Germán <span>Matilla</span></h2>
                             <p>Working hard to make games. Coffee is my best friend</p>
                         </figcaption>
-                        <div class="position">Programmer</div>
+                        <div class="position">Artist</div>
                     </figure>
 
                     <figure class="member2">
@@ -116,11 +112,10 @@
                             <h2>Ángel <span>Cabanilles</span></h2>
                             <p>Working hard to make games. Coffee is my best friend</p>
                         </figcaption>
-                        <div class="position">Programmer</div>
+                        <div class="position">2D Animator/Programmer</div>
                     </figure>
                 </div>
-            </div>
-        </div>
+</div>
             </body> 
             
             
@@ -141,9 +136,9 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
                         <ul class="list-unstyled list-inline social text-center">
-                            <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
-                            <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.facebook.com/heimdallGamesWeb"><i class="fa fa-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="https://twitter.com/gamesHeimdall"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="mailto:juegoswebestudio@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
                         </ul>
                     </div>
                     </hr>
