--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div id="2" class="carousel-item">
-                <img class="d-block w-100" src="images/shoten2.png" alt="Second slide">
+                <img class="d-block w-100" src="images/roads.jpg" alt="Second slide">
                 <div class="carousel-caption desktop">
                     <span class="salvation">
                         <h5>Roads to Salvation</h5>
@@ -100,7 +100,7 @@
     <br>
     <div class="container">
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe id="video" class="embed-responsive-item" src="https://www.youtube.com/embed/BfOdWSiyWoc?rel=0"
+            <iframe id="video" class="embed-responsive-item" src="https://www.youtube.com/embed/R1V1IlVSWDw?rel=0"
                 allowfullscreen></iframe>
         </div>
     </div>
