--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="carousel-caption desktop">
                     <span class="salvation">
                         <h5>Roads to Salvation</h5>
-                        <p>Choose your path, drive through it and run away from evil...or good?</p>
+                        <p>Choose your path, drive through it and run away from evil or good</p>
                     </span>
                     <span id="salvationGithub">
                         <p>Link to Github</p>
